--- a/etiquetas/templates/envios.html
+++ b/etiquetas/templates/envios.html
@@ -6,14 +6,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ nome }}</title>
+    <script src="scripts/jquery/jquery-3.3.1.min.js"></script>
+    <title>{{ title }}</title>
 </head>
 <body>
     <div class="container">
         <h1>envios</h1>
         <div class="list-group">
             {% for etiqueta in etiquetas %}
-            <a class="list-group-item list-group-item-action" href="etiqueta/{{ etiqueta.id }}">{{ etiqueta.nome }}</a>
+            <a class="list-group-item list-group-item-action" href="{% url 'detalhes' etiqueta.id %}">{{ etiqueta.nome }}</a>
             {% endfor %}
         </div>
     </div>
