--- a/etiquetas/templates/etiquetas.html
+++ b/etiquetas/templates/etiquetas.html
@@ -12,22 +12,29 @@
 </head>
 <body>
     <div class="container">
-        <h1>lista</h1>        
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <span class="navbar-brand">nav</span>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">                    
+                    <a class="nav-item nav-link active" href="{% url 'envios' %}">
+                        Enviados <span class="badge badge-secondary">{{count_enviados}}</span>
+                    </a>
+                    <a class="nav-item nav-link active" href="{% url 'pendentes' %}">
+                        Pendentes
+                        <span class="badge badge-secondary">{{count_pendentes}}</span>
+                    </a>
+                    <a class="nav-item nav-link active" href="{% url 'criar' %}"><i class="fas fa-plus"></i></a>
+                    </div>
+                </div>
+            </nav>              
         <div class="list-group">
             {% for etiqueta in etiquetas %}
             <a class="list-group-item list-group-item-action" href="{% url 'detalhes' etiqueta.id %}">{{ etiqueta.nome }}</a>
             {% endfor %}            
-        </div>
-        <br>
-        <a class="btn btn-primary" href="{% url 'criar' %}"><i class="fas fa-plus"></i></a>
-        <a class="btn btn-primary" href="{% url 'envios' %}">
-            Enviados
-            <span class="badge badge-light">{{count_enviados}}</span>
-        </a>
-        <a class="btn btn-primary" href="{% url 'pendentes' %}">
-            Pendentes
-            <span class="badge badge-light">{{count_pendentes}}</span>
-        </a>
+        </div>        
     </div>
 </body>
 </html>
