--- a/etiquetas/templates/etiq_form.html
+++ b/etiquetas/templates/etiq_form.html
@@ -10,13 +10,35 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <span class="navbar-brand">nav</span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">                    
+                <a class="nav-item nav-link active" href="{% url 'envios' %}">
+                    Enviados <span class="badge badge-secondary">{{count_enviados}}</span>
+                </a>
+                <a class="nav-item nav-link active" href="{% url 'pendentes' %}">
+                    Pendentes
+                    <span class="badge badge-secondary">{{count_pendentes}}</span>
+                </a>
+                <a class="nav-item nav-link active" href="{% url 'criar' %}"><i class="fas fa-plus"></i></a>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="container">
+        <br>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'home' %}">Início</a></li>
                 <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
             </ol>
         </nav>
+        <h1>{{ title }}</h1>
         <form action="" method="post">
             <div class="form-group">
                 {% csrf_token %}            
