--- a/etiquetas/templates/destinatario_confirm_delete.html
+++ b/etiquetas/templates/destinatario_confirm_delete.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ STATIC_URL }} /static/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <script src="{{ STATIC_URL }} /static/jquery/jquery-3.3.1.min.js"></script>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ title }}</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
     <div class="container">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
@@ -23,4 +13,4 @@
             <input type="submit" class="btn btn-primary" value="Confirmar">
         </form>
     </div>
-</body>
+{% endblock %}
