--- a/etiquetas/templates/etiq_form.html
+++ b/etiquetas/templates/etiq_form.html
@@ -1,35 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{ title }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ STATIC_URL }} /static/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js"></script>
-</head>
-<body>
-    <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="/"><span class="navbar-brand">Início</span></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="{% url 'home' %}?type=enviados">
-                        Enviados <span class="badge badge-secondary">{{count_enviados}}</span>
-                    </a>
-                    <a class="nav-item nav-link active" href="{% url 'home' %}?type=pendentes">
-                        Pendentes
-                        <span class="badge badge-secondary">{{count_pendentes}}</span>
-                    </a>
-                    <a class="nav-item nav-link active" href="{% url 'criar' %}"><i class="fas fa-plus"></i></a>
-                </div>
-            </div>
-        </nav>
-    </header>
+{% extends 'base.html' %}
+{% block content %}
     <div class="container">
         <br>
         <nav aria-label="breadcrumb">
@@ -48,5 +18,4 @@
             </div>
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
