--- a/etiquetas/templates/etiq_item.html
+++ b/etiquetas/templates/etiq_item.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ STATIC_URL }} /static/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <script src="{{ STATIC_URL }} /static/jquery/jquery-3.3.1.min.js"></script>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ title }}</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
     <div class="container">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
@@ -82,5 +72,4 @@
         <a class="btn btn-primary" href="{% url 'atualizar' object.id %}"><i class="fas fa-pen"></i></a>
         <a id="btn-delete" class="btn btn-primary" href="{% url 'deletar' object.id %}"><i class="fas fa-minus-circle"></i></a>                
     </div>
-</body>
-</html>
+{% endblock %}
