--- a/etiquetas/templates/destinatarios.html
+++ b/etiquetas/templates/destinatarios.html
@@ -5,7 +5,7 @@
         {% for item in object_list %}
             <a class="list-group-item list-group-item-action" href="{% url 'detalhes' item.id %}">{{ item.nome }}</a>
         {% empty %}
-            <li>No itens yet.</li>
+        <span class="list-group-item">Sem itens</span>
         {% endfor %}            
     </div>        
 </div>
