--- a/etiquetas/templates/base.html
+++ b/etiquetas/templates/base.html
@@ -11,22 +11,24 @@
         <script type="text/javascript" src="{{ STATIC_URL }} /static/jquery/jquery-3.3.1.min.js"></script>
     </head>
     <body>
-        <header class="container">
+        <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a href="/"><span class="navbar-brand">Início</span></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="{% url 'home' %}?type=enviados">
-                            Enviados <span class="badge badge-secondary">{{count_enviados}}</span>
-                        </a>
-                        <a class="nav-item nav-link active" href="{% url 'home' %}?type=pendentes">
-                            Pendentes
-                            <span class="badge badge-secondary">{{count_pendentes}}</span>
-                        </a>
-                        <a class="nav-item nav-link active" href="{% url 'criar' %}"><i class="fas fa-plus"></i></a>
+                <div class="container">
+                    <a href="/"><span class="navbar-brand">Início</span></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-item nav-link active" href="{% url 'home' %}?type=enviados">
+                                Enviados <span class="badge badge-secondary">{{count_enviados}}</span>
+                            </a>
+                            <a class="nav-item nav-link active" href="{% url 'home' %}?type=pendentes">
+                                Pendentes
+                                <span class="badge badge-secondary">{{count_pendentes}}</span>
+                            </a>
+                            <a class="nav-item nav-link active" href="{% url 'criar' %}"><i class="fas fa-plus"></i></a>
+                        </div>
                     </div>
                 </div>
             </nav>
