--- a/etiquetas/templates/destinatarios.html
+++ b/etiquetas/templates/destinatarios.html
@@ -9,4 +9,10 @@
         {% endfor %}            
     </div>        
 </div>
+{% if user.is_authenticated %}
+    <li>User: {{ user.get_username }}</li>
+    <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+{% else %}
+    <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
+{% endif %} 
 {% endblock %}
