--- a/etiquetas/templates/base.html
+++ b/etiquetas/templates/base.html
@@ -33,7 +33,14 @@
                 </div>
             </nav>
         </header>
-        <br>
+        <br>        
+        {% if user.is_authenticated %}
+            User: {{ user.get_username }}
+            <a href="{% url 'logout'%}?next={{request.path}}">Logout</a>
+        {% else %}
+            <a href="{% url 'login'%}?next={{request.path}}">Login</a>
+        {% endif %}
+
         {% block content %}
         {% endblock %}
     </body>
