--- a/etiquetas/templates/destinatarios.html
+++ b/etiquetas/templates/destinatarios.html
@@ -3,7 +3,7 @@
 <div class="container">    
     <div class="list-group">                        
         {% for item in object_list %}
-            <a class="list-group-item list-group-item-action" href="{% url 'detalhes' item.id %}">{{ item.nome }}</a>
+            <a class="list-group-item list-group-item-action" href="{% url 'detalhes_destinatario' item.id %}">{{ item.nome }}</a>
         {% empty %}
         <span class="list-group-item">Sem itens</span>
         {% endfor %}            
