--- a/etiquetas/templates/base.html
+++ b/etiquetas/templates/base.html
@@ -18,12 +18,10 @@
             <div class="sidebar-heading">{{ user.get_username }}</div>
             <div class="list-group list-group-flush">
                 <a href="{% url 'criar_destinatario' %}" class="list-group-item list-group-item-action bg-light">Adicionar Destinatario</a>
-                <a href="{% url 'criar_orgao' %}" class="list-group-item list-group-item-action bg-light">Adicionar Orgão</a>
+                <a href="{% url 'criar_orgao_endereco' %}" class="list-group-item list-group-item-action bg-light">Adicionar Orgão</a>
                 <a href="{% url 'criar_endereco' %}" class="list-group-item list-group-item-action bg-light">Adicionar Endereco</a>
                 <a class="nav-link active" href="{% url 'logout'%}?next={{request.path}}">Logout</a>
-            </div>
-            {% else %}
-            <div class="sidebar-heading"><a class="nav-link active" href="{% url 'login'%}?next={{request.path}}">Login</a></div>            
+            </div>                        
             {% endif %}
         </div>        
         <div id="page-content-wrapper">
@@ -34,6 +32,7 @@
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
+                            {% if user.is_authenticated %}
                             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                                 <div class="navbar-nav">
                                     <a class="nav-item nav-link active" href="{% url 'inicio' %}?type=enviados">
@@ -44,6 +43,7 @@
                                     </a>                            
                                 </div>
                             </div>
+                            {% endif %}
                         </div>
                     </nav>
                 </header>
